--- a/css/style.css
+++ b/css/style.css
@@ -290,12 +290,11 @@ body {
   margin-bottom: 10px;
 }
 
-
 .user {
   background-color: #fafafa;
   border: 1px solid #e8e8e8;
   padding: 15px 25px;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
