--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,9 @@ body {
   background-color: #fafafa;
   border: 1px solid #e8e8e8;
   padding: 15px 25px;
+}
+
+.user-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -303,11 +306,13 @@ body {
   display: flex;
   align-items: center;
   text-decoration: none;
+  margin-right: auto;
 }
 
 .user-avatar {
   border-radius: 50%;
   margin-right: 17px;
+  object-fit: cover;
 }
 
 .user-name {
@@ -317,9 +322,60 @@ body {
   color: #595959;
 }
 
+.edit {
+  margin-right: 10px;
+}
+
+.edit-title {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #595959;
+}
+
+.edit-container {
+  display: none;
+}
+
+.edit-container.visible {
+  display: block;
+}
+
+.edit-label {
+  display: block;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.edit-input {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  padding: 5px 10px;
+}
+
+.edit-btn {
+  background-color: #4E6F62;
+  color: #fff;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase;
+  cursor: pointer;
+  line-height: 32px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.icon-edit {
+  width: 15px;
+  height: 15px;
+}
+
 .icon-exit {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   fill: #000;
 }
 
